update bitdevs cities lists

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,14 +6,14 @@
     <div class="Footer-source">
       <a href="https://github.com/bitdevscotonou/bitdevscotonou.org" target="_blank" rel="noopener nofollow">Code Source</a>
     </div>
-    <div class="Footer-Visit">
-      <a href="https://us.umami.is/share/Ygbmc5a8KgmC2Zcd/bitdevscotonou.xyz" target="_blank" rel="noopener nofollow">Visit Count</a>
+    <div class="Footer-sponsor">
+      <a href="/cities">Cities</a>
     </div>
     <div class="Footer-sponsor">
       <a href="/sponsors">Sponsors</a>
     </div>
-    <div class="Footer-rss">
-      <a href="/feed.xml">RSS Feed</a>
+    <div class="Footer-Visit">
+      <a href="https://us.umami.is/share/Ygbmc5a8KgmC2Zcd/bitdevscotonou.xyz" target="_blank" rel="noopener nofollow">Visit Count</a>
     </div>
   </div>
 </footer>
